err/bibble.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/bibble'...
Compiling './lib/python3.5/site-packages/bibble/main.py'...
***   File "./lib/python3.5/site-packages/bibble/main.py", line 163
    print out
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/bibble-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/custom_fixers'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/latexcodec'...
Listing './lib/python3.5/site-packages/latexcodec-1.0.5.dist-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pybtex'...
Listing './lib/python3.5/site-packages/pybtex/backends'...
Listing './lib/python3.5/site-packages/pybtex/bibtex'...
Listing './lib/python3.5/site-packages/pybtex/charwidths'...
Listing './lib/python3.5/site-packages/pybtex/database'...
Listing './lib/python3.5/site-packages/pybtex/database/convert'...
Listing './lib/python3.5/site-packages/pybtex/database/format'...
Listing './lib/python3.5/site-packages/pybtex/database/input'...
Listing './lib/python3.5/site-packages/pybtex/database/output'...
Listing './lib/python3.5/site-packages/pybtex/markup'...
Listing './lib/python3.5/site-packages/pybtex/plugin'...
Listing './lib/python3.5/site-packages/pybtex/style'...
Listing './lib/python3.5/site-packages/pybtex/style/formatting'...
Listing './lib/python3.5/site-packages/pybtex/style/labels'...
Listing './lib/python3.5/site-packages/pybtex/style/names'...
Listing './lib/python3.5/site-packages/pybtex/style/sorting'...
Listing './lib/python3.5/site-packages/pybtex/tests'...
Listing './lib/python3.5/site-packages/pybtex/tests/bst_parser_test'...
Listing './lib/python3.5/site-packages/pybtex/tests/data'...
Listing './lib/python3.5/site-packages/pybtex/tests/database_test'...
Listing './lib/python3.5/site-packages/pybtex-0.21.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
